[package]
name = "qcow2"
version = "0.1.2"
edition = "2024"
authors = ["Dave Vasilevsky <dave@vasilevsky.ca>"]
description = "Reading qcow2 virtual disk images"
keywords = ["qcow2", "qemu", "disk", "image"]
license = "MIT"
documentation = "http://vasi.github.io/qcow2-rs/qcow2/"
repository = "https://github.com/vasi/qcow2-rs"
homepage = "https://github.com/vasi/qcow2-rs"
readme = "README.md"

[dependencies]
byteorder = "=1.5.0"
lru-cache = "=0.1.2"
positioned-io = "=0.3.5"
